# waynestark-quantum-decoderops-workbench

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  alembic.ini  nvidia-ising-calibration.md  pyproject.toml  research-and-resourced.md
alembic/: env.py
alembic/versions/: 20260101_0001_initial_slug.py
app/: __init__.py
app/api/: app.py  deps.py  main.py  schemas.py
app/benchmarking/: __init__.py  generate_test_data.py  ising_local_run_inference.py  ising_local_run_onnx.py  ising_subprocess.py  orchestrator.py  parallel.py  runner.py  sinter_integration.py  sweep.py
app/cli/: __init__.py  client.py  main.py
app/config/: loader.py  settings.py
app/core/: capability.py  capability_report.py  errors.py  fingerprint.py  hashing.py  run_id.py  seeding.py
app/db/: __init__.py  base.py  duckdb_backend.py  postgres_backend.py  schema_init.py  session.py
app/decoders/: __init__.py  _ising_common.py  cudaq_capability.py  cudaq_qec_capability.py  cuquantum_capability.py  ising_accurate.py  ising_fast.py  ising_fast_errors.py  onnx_validation.py  protocol.py  pymatching_baseline.py  registry.py  tensorrt_adapter.py
app/ingestion/: customer_dem.py  dem_parser.py  errors.py  schema.py  (+6 more)
docker/: Dockerfile.runner  Dockerfile.workbench
docs/: api.md  architecture.md  caveats.md  cli.md  licensing.md  report_schemas.md  stack_decisions.md
fixtures/: __init__.py
requirements/: core.lock.txt  core.txt  gpu-cu13.lock.txt  gpu-cu13.txt
scripts/: _verify_install.py  bootstrap_all.sh  bootstrap_core_env.sh  bootstrap_gpu_runtime_env.sh  build_fake_ising_stub.py  fetch_ising_assets.sh  verify_install.sh
tests/: __init__.py  conftest.py  test_pyproject.py
(+176 files in other folders)
