[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "decoderops"
version = "0.1.0"
description = "Quantum DecoderOps Workbench: decoder benchmarking, artefact packaging, deployment-readiness."
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = { text = "Apache-2.0" }
# Runtime dependencies are pinned in requirements/core.txt (protected).
# The lock file requirements/core.lock.txt is the single source of truth for pins.
# Do NOT duplicate pins here; install via `pip install -r requirements/core.lock.txt`.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "types-requests",
]

[project.scripts]
# Target is a top-level function, not the Typer instance, so packaging
# and static-analysis tools resolve it cleanly.
decoderops = "app.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "tests*"]
exclude = ["vendor*", ".venv*", "scripts*", "alembic*", "docs*", "fixtures*", "docker*"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    "vendor/",
    ".venv/",
    ".venv-prebootstrap-*",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
exclude = [
    "vendor/",
    ".venv/",
    ".venv-prebootstrap-.*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "integration",
    "real_artefacts",
    "runtime_capability",
    "gpu",
]
